k8s/drupal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drupal
  namespace: drupal
spec:
  selector:
    app: drupal
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
